@@ -1,8 +1,6 @@
 #include "byte.h"
 
-void byte_zero(s,n)
-char *s;
-register unsigned int n;
+void byte_zero(char *s,register unsigned int n)
 {
   for (;;) {
     if (!n) break; *s++ = 0; --n;
