@@ -8,6 +8,5 @@
 #include <sys/types.h>
 #include <sys/time.h>
 #include <sys/select.h>
-extern int select(int,fd_set *,fd_set *,fd_set *,struct timeval *);
 
 #endif
