@@ -4,7 +4,7 @@
 #include <sys/wait.h>
 #include "haswaitp.h"
 
-int wait_nohang(wstat) int *wstat;
+int wait_nohang(int *wstat)
 {
 #ifdef HASWAITPID
   return waitpid(-1,wstat,WNOHANG);
